# vector-deploy-grainhead-2c00e9e3

./: Makefile  README.md  pyproject.toml  render.yaml
accounts/: models.py  serializers.py  urls.py  views.py  views_auth_token.py
accounts/migrations/: 0001_initial.py  0002_add_vector_user_id.py
accounts/tests/: test_user_views.py
config/: settings.py  urls.py  views.py
frontend/: eslint.config.js  fast-screenshot.cjs  index.html  package-lock.json  tsconfig.app.tsbuildinfo
frontend/public/: __vector-bridge.js
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  HeroSection.tsx  Navbar.tsx  ProductCard.tsx  ProductGrid.tsx
frontend/src/components/ui/: Dialog.tsx  Select.tsx  index.ts
frontend/src/hooks/: useAuth.ts
frontend/src/services/: api.ts
frontend/src/styles/: tokens.css
frontend/tests/e2e/: app.spec.ts  landing.spec.ts
shared/: authentication.py
